Fixed bug generated by overflow at 'person-container' item

--- a/web/stylesheets/tree_page.scss
+++ b/web/stylesheets/tree_page.scss
@@ -16,6 +16,12 @@ body{
 .tree-playground{
     height: 100vh;
 
+    .person-item {
+        display: inline-block;
+        background: red;
+        padding: 10px;
+    }
+
     .family-manager{
         position: fixed;
         right: 0;
@@ -31,6 +37,10 @@ body{
             bottom: 0;
             overflow: auto;
             padding-bottom: 100px;
+        }
+
+        ::-webkit-scrollbar {
+            display: none;
         }
 
         .person-item{
